--- a/Index.html/Disfruta-Síon-Login.html
+++ b/Index.html/Disfruta-Síon-Login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -34,6 +34,10 @@
                 <br>
                 <button type="button" onclick="window.location.href = 'Disfruta-Sión-Inicio.html'">Iniciar
                     Sesión</button>
+                    <br><br>
+
+                    <a href="">Registrarse</a>
+
 
 
             </form>
