--- a/Index.html/Disfruta-Síon-Login.html
+++ b/Index.html/Disfruta-Síon-Login.html
@@ -36,7 +36,7 @@
                     Sesión</button>
                     <br><br>
 
-                    <a href="">Registrarse</a>
+                    <a href="Disfruta-Sión - Registrarse.html">Registrarse</a>
 
 
 
