--- a/Index.html/Disfruta-Síon-Login.html
+++ b/Index.html/Disfruta-Síon-Login.html
@@ -37,6 +37,10 @@
                     <br><br>
 
                     <a href="Disfruta-Sión - Registrarse.html">Registrarse</a>
+                    
+                    <div>
+                        <img src="" alt="">
+                    </div>
 
 
 
