se agregó el local-Storage

--- a/Index.html/Disfruta-Sión-Inicio.html
+++ b/Index.html/Disfruta-Sión-Inicio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Inicio.css">
     <link rel="icon" href="IMG/Logo-DIsfru-removebg-preview.ico">
+    
     <title>Disfruta-Síon - Inicio</title>
 </head>
 
@@ -39,7 +40,7 @@
         <div class="footer-contenido">
             <p>&copy; 2023 DISFRUTA-SIÓN - Comida Rápida</p>
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="Disfruta-Sión-Inicio.html">Inicio</a></li>
                 <li><a href="#">Menú</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
