--- a/Index.html/Disfruta-Síon-Login.html
+++ b/Index.html/Disfruta-Síon-Login.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disfruta-Síon - Login</title>
+    <title>Disfruta-Sión - Login</title>
     <link rel="icon" href="IMG/Logo-DIsfru-removebg-preview.ico">
     <link rel="stylesheet" href="css/Login.css">
+    <script src="Registro.js"></script>
 </head>
 
 <body>
-
     <div class="background">
         <img src="IMG/Fondo-WebOrigin.png" alt="Fondo-Web">
     </div>
@@ -32,26 +32,12 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <br>
-                <button type="button" onclick="window.location.href = 'Disfruta-Sión-Inicio.html'">Iniciar
-                    Sesión</button>
-                    <br><br>
-
-                    <a href="Disfruta-Sión - Registrarse.html">Registrarse</a>
-                    
-                    <div>
-                        <img src="" alt="">
-                    </div>
-
-
-
+                <button type="button" onclick="iniciarSesion()" >Iniciar Sesión</button>
+                <br><br>
+                <a href="Disfruta-Sión - Registrarse.html">Registrarse</a>
             </form>
         </div>
     </div>
-
-
-
 </body>
-
-
 
 </html>
