--- a/Index.html/Disfruta-Sión - Registrarse.html
+++ b/Index.html/Disfruta-Sión - Registrarse.html
@@ -7,41 +7,23 @@
     <title>Disfruta-Sión - Registrarse</title>
     <link rel="icon" href="IMG/Logo-DIsfru-removebg-preview.ico">
     <link rel="stylesheet" href="css/Registrarse.css">
-
+    <script src="Registro.js"></script>
 </head>
 
 <body>
     <div class="background">
         <img src="IMG/Fondo-WebOrigin.png" alt="FondoDISFRUTA-SIÓN">
     </div>
-   
 
     <form action="#" id="form" class="form_register">
-        <input class="" type="text" name="nombre" id="nombres" placeholder="Ingrse su Nombre" required><br>
-        <input class="" type="text" name="apellido" id="apellidos" placeholder="Ingrse su apellidos" required><br>
-        <input class="" type="email" name="correo" id="correo" placeholder="Correo electrónico" required><br>
-        <input class="" type="password" name="Contraseña" id="password" placeholder="Contraseña" required><br>
+        <input class="registro" type="text" name="nombre" id="nombres" placeholder="Nombre" required><br>
+        <input class="registro" type="text" name="apellido" id="apellidos" placeholder="Apellidos" required><br>
+        <input class="registro" type="email" name="correo" id="correo" placeholder="Correo Electrónico" required><br>
+        <input class="registro" type="password" name="Contraseña" id="password" placeholder="Contraseña" required><br>
         <p>Estoy de acuerdo con <a href="#">Términos & Condiciones</a></p>
-<input class="botons" type="submit" value="Registrar">
+        <input class="botons" type="button" value="Registrar" onclick="guardarUsuario()">
+        <p>¿Ya tienes una cuenta? <a href="Disfruta-Síon-Login.html">Iniciar Sesión</a></p>
     </form>
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
