falta resto de pagina

--- a/Index.html/Disfruta-Sión - Registrarse.html
+++ b/Index.html/Disfruta-Sión - Registrarse.html
@@ -20,6 +20,13 @@
         <input class="registro" type="text" name="apellido" id="apellidos" placeholder="Apellidos" required><br>
         <input class="registro" type="email" name="correo" id="correo" placeholder="Correo Electrónico" required><br>
         <input class="registro" type="password" name="Contraseña" id="password" placeholder="Contraseña" required><br>
+        <label for="genero">Género:</label>
+        <select class="registro" name="genero" id="genero" required>
+            <option value="masculino">Masculino</option>
+            <option value="femenino">Femenino</option>
+            <option value="otro">Otro</option>
+        </select>
+        
         <p>Estoy de acuerdo con <a href="#">Términos & Condiciones</a></p>
         <input class="botons" type="button" value="Registrar" onclick="guardarUsuario()">
         <p>¿Ya tienes una cuenta? <a href="Disfruta-Síon-Login.html">Iniciar Sesión</a></p>
