--- a/Index.html/Disfruta-Síon-Login.html
+++ b/Index.html/Disfruta-Síon-Login.html
@@ -24,7 +24,7 @@
             <h2>Iniciar Sesión</h2>
             <form action="#" method="post">
                 <div class="input-container">
-                    <label for="username">Nombre de Usuario</label>
+                    <label for="username">Correo</label>
                     <input type="text" id="username" name="username" required>
                 </div>
                 <div class="input-container">
