falta cerrar sesion & mostrar nombre

--- a/Index.html/Disfruta-Sión-Inicio.html
+++ b/Index.html/Disfruta-Sión-Inicio.html
@@ -19,6 +19,9 @@
             <li><a href="#inicio" class="enlace-inicio">INICIO</a></li>
             <li><a href="#menu" class="enlace-menu">MENÚ</a></li>
             <li><a href="#nosotros" class="enlace-nosotros">NOSOTROS</a></li>
+             <img class="bars" src="SVG-ICON/bars-solid.svg"  alt="bars">
+            
+
 
 
 
