se agregó ventana al ingresa datos incorrectos en el login, Falta mostrar nombre nav

--- a/Index.html/Disfruta-Síon-Login.html
+++ b/Index.html/Disfruta-Síon-Login.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <div class="popup-container" id="popup">
+        <p id="popup-message"></p>
+        <button onclick="cerrarPopup()">Cerrar</button>
+    </div>
+
+    
+    <div class="overlay" id="overlay"></div>
     <div class="background">
         <img src="IMG/Fondo-WebOrigin.png" alt="Fondo-Web">
     </div>
@@ -38,6 +45,9 @@
             </form>
         </div>
     </div>
-</body>
+
+
+
+    
 
 </html>
