--- a/Index.html/Disfruta-Sión-Inicio.html
+++ b/Index.html/Disfruta-Sión-Inicio.html
@@ -51,10 +51,6 @@
             <br>
         </div>
     </div>
-
-    <div class="logo-fin">
-        <img  src="IMG/Logo-DIsfru-removebg-preview.ico" alt="logo empresa">
-    </div>
     <br><br><br>
     <div class="linea-menu">
         <hr>
@@ -188,7 +184,7 @@
     <footer>
 
         <div class="footer-contenido">
-            <p id="p-footer">Copyright &copy; 2023 DISFRUTA-SIÓN - Comida Rápida</p>
+            <p>Copyright &copy; 2023 DISFRUTA-SIÓN - Comida Rápida</p>
             <div class="redes-sociales">
                 <a href="https://www.facebook.com/profile.php?id=100095370104357" target="_blank">
 
