--- a/Index.html/Disfruta-Sión-Inicio.html
+++ b/Index.html/Disfruta-Sión-Inicio.html
@@ -41,17 +41,22 @@
     </nav>
 
     <div id="inicio" class="imagen-texto">
-        <img class="hambu-img" src="IMG/hambu.-img.png" alt="foto de una hamburguesa">
-        <div class="texto">
-            <h1>¡Descubre Nuestra Nueva Hamburguesa Especial!</h1>
-            <p>No te pierdas la oportunidad de deleitarte con esta hamburguesa única. Ya sea para el almuerzo, la cena o
-                un antojo rápido, nuestra hamburguesa especial está lista para satisfacer tu apetito. Ven a
-                <strong>DISFRUTA-SIÓN</strong> y descubre el sabor que todos están comentando.
-            </p>
-            <br>
+        <section class="nosotros-section">
+                    <img class="hambu-img" src="IMG/Logo-DIsfru-removebg-preview.ico" alt="foto de una hamburguesa">
+
+            <article class="historia">
+                <header>
+                    <h2>¡Descubre Nuestra Nueva Hamburguesa Especial!</h2>
+                </header>
+                <p>No te pierdas la oportunidad de deleitarte con esta hamburguesa única. Ya sea para el almuerzo, la cena o
+                    un antojo rápido, nuestra hamburguesa especial está lista para satisfacer tu apetito. Ven a
+                    <strong>DISFRUTA-SIÓN</strong> y descubre el sabor que todos están comentando.
+                </p>        </article>
+        </section>
+            
         </div>
     </div>
-    <br><br><br>
+    <br>
     <div class="linea-menu">
         <hr>
         <div id="menu" class="menu-titulo">MENÚ</div>
