se agrego verificacion registro

--- a/Index.html/Disfruta-Sión - Registrarse.html
+++ b/Index.html/Disfruta-Sión - Registrarse.html
@@ -27,7 +27,8 @@
             <option value="otro">Otro</option>
         </select>
         
-        <p>Estoy de acuerdo con <a href="#">Términos & Condiciones</a></p>
+        <p ><input type="checkbox">Estoy de acuerdo con <a href="#">Términos & Condiciones</a></p>
+        
         <input class="botons" type="button" value="Registrar" onclick="guardarUsuario()">
         <p>¿Ya tienes una cuenta? <a href="Disfruta-Síon-Login.html">Iniciar Sesión</a></p>
     </form>
